# SkillPulse-Backend

./: .gitignore  .google-cookie  README.md  check.py  db.sqlite3  manage.py  package-lock.json  pyproject.toml  requirements.txt
SkillPulseBackend/: asgi.py  settings.py  urls.py  wsgi.py
main_app/: .google-cookie  DATA.py  Database_functions.py  answers.py  chatgpt.py  emails.py  eval_module.py  mongo.py  mongoatlas.py  test.py  tests.py  urls.py  views.py
