[tool.poetry]
name = "skillpulsebackend"
version = "0.1.0"
description = "Backend for skillpulse"
authors = ["Arjun, Yogesh"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
markdown = "^3.4.4"
django-filter = "^23.2"
django-cors-headers = "^4.2.0"
pymongo = "^4.5.0"
openai = "^0.28.0"
google = "^3.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
